# 3dchess

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/shaders/: board.frag  board.vert  highlight.frag  highlight.vert  piece.frag  piece.vert
lib/glad/: glad.c  glad.h
src/: main.cpp
src/ai/: DifficultyManager.cpp  DifficultyManager.h  UCIBridge.cpp  UCIBridge.h
src/core/: BoardState.cpp  BoardState.h  CaptureTracker.cpp  CaptureTracker.h  GameController.cpp  GameController.h  MoveHistory.cpp  MoveHistory.h  MoveValidator.cpp  MoveValidator.h
src/input/: InputHandler.cpp  InputHandler.h
src/renderer/: Board3D.cpp  Board3D.h  Highlighter.cpp  Highlighter.h  PieceMesh.cpp  PieceMesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  UIPanel.cpp  UIPanel.h
